syntax = "proto3";
option java_package = "helloworld";

// The hello world service definition.
service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
